First verison of Bachelors Thesis

--- a/Doc/Bachelor Thesis/FormatsAndDefs.tex
+++ b/Doc/Bachelor Thesis/FormatsAndDefs.tex
@@ -173,6 +173,11 @@
 	\lst@DefSaveDef{`:}\colon@json{\processColon@json},
 	basicstyle          = \ttfamily,
 	keywordstyle        = \ttfamily\bfseries,
+	backgroundcolor		=\color{white}, 
+	frame				= single, 
+	frameround			= ffff,
+	captionpos			= b,
+	basicstyle			= \scriptsize
 }
 
 % flip the switch if a colon is found in Pmode
