--- a/Doc/Bachelor Thesis/conclusions.tex
+++ b/Doc/Bachelor Thesis/conclusions.tex
@@ -1,12 +1,12 @@
 \newpage
 \ifthenelse {\boolean{bachelor}}
 {
-	\section{Conslusions}
-	%\section{Záver}
+	%\section{Conslusions}
+	\section{Záver}
 }
 {
-	\chapter{Conclusions}
-	%\chapter{Záver}
+	%\chapter{Conclusions}
+	\chapter{Záver}
 }
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi sit amet arcu. Fusce pharetra dapibus elit. Duis malesuada. Proin at elit vitae quam cursus tristique. Quisque fermentum. Praesent dictum. Nullam vehicula. Nunc pharetra dolor ut velit. Sed pulvinar, est sed congue tempor, nibh arcu cursus enim, quis consequat magna lacus sed pede. In sagittis. Etiam volutpat, velit id tincidunt egestas, augue ligula auctor eros, sit amet viverra sapien tortor at odio. In diam libero, fringilla ut, adipiscing condimentum, ultricies at, dui. Phasellus vitae risus.
 
