--- a/Doc/Bachelor Thesis/main.tex
+++ b/Doc/Bachelor Thesis/main.tex
@@ -75,12 +75,12 @@ pdfkeywords={key words},%
 %% Anotation
 %%
 \pagenumbering{roman}\setcounter{page}{2}
-\input{anotation.tex}
+%\input{anotation.tex}
 
 %%
 %% Declaration
 %%
-\input{declaration.tex}
+%\input{declaration.tex}
 
 %%
 %% Contents
@@ -141,12 +141,12 @@ pdfkeywords={key words},%
 %%
 %% test
 %%
-\input{results.tex}
+%\input{results.tex}
 
 %%
 %% Conclusion
 %%tex 
-\input{conclusions.tex}
+%\input{conclusions.tex}
 
 %%
 %% References
